Record lesson headings and paragraphs

--- a/myself.html
+++ b/myself.html
@@ -1,29 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Practice</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>    
-    <h1>Hello, World!</h1>
-    <h2>כיתה __, בית ספר __</h2>
-    <div class="container-card">
-        <div class="card">
-            <h2>ניצן כהן</h2>
-            <h3>חוג:</h3>
-            <p>החוג שאני הכי אוהב זה להעביר אימוני ריצה.</p>
-            <h3>תחביב שאני עושה:</h3>
-            <p>תחביב שאני אוהב לעשות בזמני הפנוי זה לרכוב על אופניים, ולשפץ אופניים ישנים.</p>
-            <h3>תחביב שהייתי רוצה לעשות:</h3>
-            <p>לחתור בקייאק.</p>
-            <h3>חיית מחמד:</h3>
-            <p>הייתי רוצה לאמץ כלב.</p>
-            <h3>פרט מעניין:</h3>
-            <p>אני שיחררתי 50 אבקועים של צבי ים שבקעו מהביצים לים הגדול.</p>
-        </div>
-        <div class="card"></div>
-    </div>    
-</body>
-</html>
+<h1>התחביבים השלנו</h1>
+
+<h2>ניצן כהן</h2>
+
+<h3>חוג:</h3>
+<p>אני משתתף בקבוצת ריצה.</p>
+
+<h3>תחביב שאני עושה:</h3>
+<p>לרכוב על אופניים, לרוץ ולשחק שח-מט.</p>
+
+<h3>תחביב שאני רוצה לעשות:</h3>
+<p>לחתור בקייאק.</p>
+
+<h3>חיית מחמד:</h3>
+<p>אני רוצה לאמץ כלב, אבל אין לי.</p>
+
+<h3>פרט מעניין...</h3>
+<p>אני האח האמצעי מבין שלושה אחים במשפחה.</p>
